Closed
Bug 1660993
Opened 5 years ago
Closed 5 years ago
nsPrintSettingsWin::InitWithInitializer should reset the DEVMODE scale like nsPrintSettingsWin::CopyFromNative
Categories
(Core :: Printing: Setup, defect, P1)
Tracking
()
RESOLVED
FIXED
82 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox79 | --- | unaffected |
| firefox80 | --- | unaffected |
| firefox81 | --- | fixed |
| firefox82 | --- | fixed |
People
(Reporter: bobowen, Assigned: bobowen)
References
Details
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
I just spotted that I removed the resetting of dmScale in the DEVMODE in nsPrintSettingsWin::InitWithInitializer.
I only realised late on that it made sense to store the DEVMODE in that function, so we should reset like in nsPrintSettingsWin::CopyFromNative in case this DEVMODE gets used to set up the printer.
| Assignee | ||
Comment 1•5 years ago
|
||
Pushed by bobowencode@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/75dc13363021
Reset dmScale in nsPrintSettingsWin::InitWithInitializer. r=jwatt
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
| Assignee | ||
Comment 5•5 years ago
|
||
Comment on attachment 9171927 [details]
Bug 1660993: Reset dmScale in nsPrintSettingsWin::InitWithInitializer. r=jwatt!
Beta/Release Uplift Approval Request
- User impact if declined: Required for new Printing UI to prevent potential print scaling issues.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: Bug 1660986
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Small refactor and simple change to add line already in existing similar code.
- String changes made/needed: None
Flags: needinfo?(bobowencode)
Attachment #9171927 -
Flags: approval-mozilla-beta?
Comment 6•5 years ago
|
||
Comment on attachment 9171927 [details]
Bug 1660993: Reset dmScale in nsPrintSettingsWin::InitWithInitializer. r=jwatt!
approved for 81.0b3
Attachment #9171927 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 7•5 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•