Bug 1660993: Reset dmScale in nsPrintSettingsWin::InitWithInitializer. r=jwatt, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D88152